Closing SteamVR and restarting VR Session crashes Blender #94268

Closed
opened 2021-12-20 15:26:41 +01:00 by Sybren A. Stüvel · 9 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13
VR System: Valve Index + SteamVR version 1.20.4 (1634602223).

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, hash: 5adc06d2d8
Worked: never (afaik, tested with 3.0 betas)

Short description of error
Blender crashes when pressing the Start VR Session after an earlier VR session was closed from within SteamVR.

Exact steps for others to reproduce the error

  • Enable the VR Scene Inspection add-on
  • Start SteamVR
  • In Blender, press the Start VR Session button
  • From within the VR session, press the "system menu" button, and in the SteamVR menu choose "Exit VR". This shuts down all of SteamVR.
  • In Blender, press the Start VR Session button
  • Blender crashes.

Exception Info

Exception thrown at 0x00007FF8401AD390 in blender.exe: 0xC0000005: Access violation executing location 0x00007FF8401AD390.

This is on the line

if (r_requirement_info) {

r_requirement_info is just a pointer to a variable on the stack of the calling function. It's not nullptr.

Stack trace
Running a debug build of Blender in VS 2019 produces this stack trace:

blender.exe!GHOST_XrGraphicsBindingD3D::checkVersionRequirements(GHOST_Context & __formal, XrInstance_T * instance, unsigned __int64 system_id, std::string * r_requirement_info) Line 320
	at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_XrGraphicsBinding.cpp(320)
blender.exe!GHOST_XrSession::start(const GHOST_XrSessionBeginInfo * begin_info) Line 241
	at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_XrSession.cpp(241)
blender.exe!GHOST_XrContext::startSession(const GHOST_XrSessionBeginInfo * begin_info) Line 520
	at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_XrContext.cpp(520)
blender.exe!GHOST_XrSessionStart(GHOST_XrContextHandle__ * xr_contexthandle, const GHOST_XrSessionBeginInfo * begin_info) Line 883
	at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_C-api.cpp(883)
blender.exe!wm_xr_session_toggle(wmWindowManager * wm, wmWindow * session_root_win, void(*)(const wmXrData *) session_exit_fn) Line 156
	at C:\workspace\blender-git\blender\source\blender\windowmanager\xr\intern\wm_xr_session.c(156)
blender.exe!wm_xr_session_toggle_exec(bContext * C, wmOperator * UNUSED_op) Line 144
	at C:\workspace\blender-git\blender\source\blender\windowmanager\xr\intern\wm_xr_operators.c(144)
blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1325
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1325)
blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, wmEvent * event) Line 1520
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1520)
blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties) Line 1568
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1568)
blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const unsigned char * drawstr) Line 1756
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1756)
blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1028
	at C:\workspace\blender-git\blender\source\blender\editors\interface\interface_handlers.c(1028)
blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 11381
	at C:\workspace\blender-git\blender\source\blender\editors\interface\interface_handlers.c(11381)
blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 688
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(688)
blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3016
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(3016)
blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3130
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(3130)
blender.exe!wm_event_do_handlers(bContext * C) Line 3618
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(3618)
blender.exe!WM_main(bContext * C) Line 642
	at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm.c(642)
blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 565
	at C:\workspace\blender-git\blender\source\creator\creator.c(565)
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 496.13 VR System: Valve Index + SteamVR version 1.20.4 (1634602223). **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, hash: `5adc06d2d8` Worked: never (afaik, tested with 3.0 betas) **Short description of error** Blender crashes when pressing the Start VR Session after an earlier VR session was closed from within SteamVR. **Exact steps for others to reproduce the error** - Enable the VR Scene Inspection add-on - Start SteamVR - In Blender, press the Start VR Session button - From within the VR session, press the "system menu" button, and in the SteamVR menu choose "Exit VR". This shuts down all of SteamVR. - In Blender, press the Start VR Session button - Blender crashes. **Exception Info** ``` Exception thrown at 0x00007FF8401AD390 in blender.exe: 0xC0000005: Access violation executing location 0x00007FF8401AD390. ``` This is on the line ```lang=cpp ``` if (r_requirement_info) { ``` ``` `r_requirement_info` is just a pointer to a variable on the stack of the calling function. It's not `nullptr`. **Stack trace** Running a debug build of Blender in VS 2019 produces this stack trace: ``` blender.exe!GHOST_XrGraphicsBindingD3D::checkVersionRequirements(GHOST_Context & __formal, XrInstance_T * instance, unsigned __int64 system_id, std::string * r_requirement_info) Line 320 at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_XrGraphicsBinding.cpp(320) blender.exe!GHOST_XrSession::start(const GHOST_XrSessionBeginInfo * begin_info) Line 241 at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_XrSession.cpp(241) blender.exe!GHOST_XrContext::startSession(const GHOST_XrSessionBeginInfo * begin_info) Line 520 at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_XrContext.cpp(520) blender.exe!GHOST_XrSessionStart(GHOST_XrContextHandle__ * xr_contexthandle, const GHOST_XrSessionBeginInfo * begin_info) Line 883 at C:\workspace\blender-git\blender\intern\ghost\intern\GHOST_C-api.cpp(883) blender.exe!wm_xr_session_toggle(wmWindowManager * wm, wmWindow * session_root_win, void(*)(const wmXrData *) session_exit_fn) Line 156 at C:\workspace\blender-git\blender\source\blender\windowmanager\xr\intern\wm_xr_session.c(156) blender.exe!wm_xr_session_toggle_exec(bContext * C, wmOperator * UNUSED_op) Line 144 at C:\workspace\blender-git\blender\source\blender\windowmanager\xr\intern\wm_xr_operators.c(144) blender.exe!wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1325 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1325) blender.exe!wm_operator_call_internal(bContext * C, wmOperatorType * ot, PointerRNA * properties, ReportList * reports, const wmOperatorCallContext context, const bool poll_only, wmEvent * event) Line 1520 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1520) blender.exe!WM_operator_name_call_ptr(bContext * C, wmOperatorType * ot, wmOperatorCallContext context, PointerRNA * properties) Line 1568 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1568) blender.exe!WM_operator_name_call_ptr_with_depends_on_cursor(bContext * C, wmOperatorType * ot, wmOperatorCallContext opcontext, PointerRNA * properties, const unsigned char * drawstr) Line 1756 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(1756) blender.exe!ui_apply_but_funcs_after(bContext * C) Line 1028 at C:\workspace\blender-git\blender\source\blender\editors\interface\interface_handlers.c(1028) blender.exe!ui_handler_region_menu(bContext * C, const wmEvent * event, void * UNUSED_userdata) Line 11381 at C:\workspace\blender-git\blender\source\blender\editors\interface\interface_handlers.c(11381) blender.exe!wm_handler_ui_call(bContext * C, wmEventHandler_UI * handler, const wmEvent * event, int always_pass) Line 688 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(688) blender.exe!wm_handlers_do_intern(bContext * C, wmWindow * win, wmEvent * event, ListBase * handlers) Line 3016 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(3016) blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 3130 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(3130) blender.exe!wm_event_do_handlers(bContext * C) Line 3618 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm_event_system.c(3618) blender.exe!WM_main(bContext * C) Line 642 at C:\workspace\blender-git\blender\source\blender\windowmanager\intern\wm.c(642) blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 565 at C:\workspace\blender-git\blender\source\creator\creator.c(565) ```
Author
Member

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Member

Added subscribers: @JulianEisel, @muxed-reality

Added subscribers: @JulianEisel, @muxed-reality
Member

Thanks for the report. Which SteamVR version are you using?
Unfortunately, I wasn't able to reproduce with SteamVR 1.20.4 and I'm not sure what the underlying issue is.
Maybe @JulianEisel has some idea?

Thanks for the report. Which SteamVR version are you using? Unfortunately, I wasn't able to reproduce with SteamVR 1.20.4 and I'm not sure what the underlying issue is. Maybe @JulianEisel has some idea?

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Member

I'm on version 1.20.4 (1634602223).

I'm on version 1.20.4 (1634602223).
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Could finally reproduce this on a Quest 2 (doesn't occur on my Lenovo Explorer WMR headset).
Submitted a fix in D14023.

Could finally reproduce this on a Quest 2 (doesn't occur on my Lenovo Explorer WMR headset). Submitted a fix in [D14023](https://archive.blender.org/developer/D14023).

This issue was referenced by 4fbd00e04c

This issue was referenced by 4fbd00e04c00735fdcc135c588b884fbb9b71efc
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Peter Kim self-assigned this 2022-02-11 12:48:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94268
No description provided.